[package]
name = "wepu"
version = "0.1.0"
edition = "2021"

[profile.release]
panic = "abort"
lto = "fat"
codegen-units = 1
opt-level = 'z'

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.6.6", default-features = false, features = ["csr"] }
leptos_router = { version = "0.6.6", default-features = false, features = ["csr"] }
lepu = { git = "https://github.com/lessflake/lepu.git" }
wasm-bindgen-futures = "0.4.41"
web-sys = { version = "0.3.68", features = ["Blob", "File", "FileList", "FileReader"] }
